# cs-bridge-2020-hw15

./: .hwconfig.json  CMakeLists.txt  README.md
gumby/: CMakeLists.txt  gumby.cpp  gumby.h
gumby_tests/: CMakeLists.txt  gumby_tests.cpp
payroll/: CMakeLists.txt  payroll.cpp  payroll.h
payroll_tests/: CMakeLists.txt  DoublyLinkedList_tests.cpp  Employee_tests.cpp  PreciseDecimal_tests.cpp  ReadFunctions_tests.cpp  payroll_tests.cpp
q1/: CMakeLists.txt  linkedlist.h  main.cpp  payroll.cpp  payroll.h  question.md
